objects/Material__c.object
<CustomObject>
    <fields>
        <fullName>Active_Ingredient__c</fullName>
        <label>Active Ingredient</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acetamiprid</fullName>
                </value>
                <value>
                    <fullName>Acetochlor</fullName>
                </value>
                <value>
                    <fullName>Aminocyclopyrachlor</fullName>
                </value>
                <value>
                    <fullName>Aminomethanamide</fullName>
                </value>
                <value>
                    <fullName>Atrazine</fullName>
                </value>
                <value>
                    <fullName>Azafenidin</fullName>
                </value>
                <value>
                    <fullName>Bacillus Thuringiensis</fullName>
                </value>
                <value>
                    <fullName>Benomyl</fullName>
                </value>
                <value>
                    <fullName>Bensulfuron Methyl</fullName>
                </value>
                <value>
                    <fullName>Bromacil</fullName>
                </value>
                <value>
                    <fullName>Chlorantraniliprole</fullName>
                </value>
                <value>
                    <fullName>Chlorethoxyfos</fullName>
                </value>
                <value>
                    <fullName>Chlorimuron Ethyl</fullName>
                </value>
                <value>
                    <fullName>Chlorothalonil</fullName>
                </value>
                <value>
                    <fullName>Chlorsulfuron</fullName>
                </value>
                <value>
                    <fullName>Chlorsulfuron Methyl</fullName>
                </value>
                <value>
                    <fullName>Cinmethylin</fullName>
                </value>
                <value>
                    <fullName>Clopyralid</fullName>
                </value>
                <value>
                    <fullName>Copper Hydroxide</fullName>
                </value>
                <value>
                    <fullName>Cyanazine</fullName>
                </value>
                <value>
                    <fullName>Cyantraniliprole</fullName>
                </value>
                <value>
                    <fullName>Cymoxanil</fullName>
                </value>
                <value>
                    <fullName>Dicrotophos</fullName>
                </value>
                <value>
                    <fullName>Dimethenamid</fullName>
                </value>
                <value>
                    <fullName>Dimethylamine salt of dicamba</fullName>
                </value>
                <value>
                    <fullName>Diuron</fullName>
                </value>
                <value>
                    <fullName>Esfenvalerate</fullName>
                </value>
                <value>
                    <fullName>Ethametsulfuron methyl</fullName>
                </value>
                <value>
                    <fullName>Ethephon</fullName>
                </value>
                <value>
                    <fullName>Ethylenebisdithiocarbamate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RP®</fullName>
                </value>
                <value>
                    <fullName>BAX® System</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Lateral Flow System</fullName>
                </value>
                <value>
                    <fullName>DuPont™ StatMedia™</fullName>
                </value>
                <value>
                    <fullName>RiboPrinter® System</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercialisation_Stage__c</fullName>
        <label>Commercialisation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
                <value>
                    <fullName>Production Trial</fullName>
                </value>
                <value>
                    <fullName>Scale Up</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Phasing Out</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Internal Product</fullName>
                </value>
                <value>
                    <fullName>Special Order</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Of_Origin__c</fullName>
        <label>Country Of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda Islands</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_rtf__c</fullName>
        <description>Rich text field to capture details and image of a Material</description>
        <inlineHelpText>Rich text field to capture details and image of a Material</inlineHelpText>
        <label>Description_</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ERP_Base_UOM__c</fullName>
        <description>Describes the lowest level unit of measure that would be reasonably handled.  This is directly linked to the profit center UOM for materials with a profit center.</description>
        <label>Base UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this material is flagged for Deletion</description>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel_Code__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Distribution_Channel__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Dist. Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division_Code__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Division__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this material is configurable</description>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Code__c</fullName>
        <description>Global Material Code(GMC) of the product/material as defined in the Product Master in SAP.</description>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_General_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the record that contains the SAP general data record for this material, which is shared across sales orgs</description>
        <label>Material - General Data</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_1_Code__c</fullName>
        <label>Material Group 1 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_1__c</fullName>
        <label>Material Group 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_2_Code__c</fullName>
        <label>Material Group 2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_2__c</fullName>
        <label>Material Group 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_3_Code__c</fullName>
        <label>Material Group 3 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_3__c</fullName>
        <description>Enterprise Resource Planning (ERP) Product End Use data from SAP_BW. Defines the end use of a DuPont product as defined by the business unit.</description>
        <label>Material Group 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group_Code__c</fullName>
        <label>Material Group Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Group__c</fullName>
        <label>Material Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Order_Block_Code__c</fullName>
        <description>Indicates if further sales order processing is blocked for this material.</description>
        <label>Material Order Block Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Order_Block__c</fullName>
        <description>Indicates if further sales order processing is blocked for this material.</description>
        <label>Material Order Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Price_Group_Code__c</fullName>
        <label>Material Price Group Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Material_Price_Group__c</fullName>
        <label>Material Price Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Owning_Org__c</fullName>
        <description>Owning Organization (typically FRB5 in SAP_CEDW)</description>
        <label>ERP Owning Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Family__c</fullName>
        <description>Product Family from CEDW_SAP (derived from SAP Product Hierarchy)</description>
        <label>ERP Product Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Code__c</fullName>
        <description>Concatenation of the 9 Product Hierarchy Levels, always an 18-character string</description>
        <label>Product Hierarchy Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_1_Code__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH1 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_1__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_2_Code__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH2 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_2__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_3_Code__c</fullName>
        <description>Alphanumeric character string for grouping together materials by combining different characteristics. Product hierarchy on the material master is used by reporting, planning, and pricing.</description>
        <label>PH3 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Product_Hierarchy_Level_3__c</fullName>
        <label>PH3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_10_Code__c</fullName>
        <label>Profit Center 10 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_10__c</fullName>
        <label>Profit Center 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_4_Code__c</fullName>
        <label>Profit Center 4 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_4__c</fullName>
        <label>Profit Center 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_5_Code__c</fullName>
        <label>Profit Center 5 Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_5__c</fullName>
        <label>Profit Center 5</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center_Code__c</fullName>
        <description>Key that uniquely identifies the profit center in the current controlling area.</description>
        <label>Profit Center Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Profit_Center__c</fullName>
        <description>Key that uniquely identifies the profit center in the current controlling area.</description>
        <label>Profit Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org_Code__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org. Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Org__c</fullName>
        <description>An organizational unit responsible for the sale of certain products or services.</description>
        <label>Sales Org.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_UOM__c</fullName>
        <label>Sales UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Source_Cluster__c</fullName>
        <description>Specific SAP box or cluster where the data of this record originates</description>
        <label>Source Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalProduct_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Product ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>Combines the  Source Cluster + Material Cod + Sales Org Code + Distribution Channel Code + Division Code to identify a unique record.</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Federal_Comments__c</fullName>
        <label>Federal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Federal_Establishment_Nb__c</fullName>
        <label>Federal Establishment Nb</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Registration_Nb__c</fullName>
        <label>Federal Registration Nb</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Registration_status__c</fullName>
        <label>Federal Registration status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federal_Restricted_Use_Product__c</fullName>
        <label>Federal Restricted Use Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <description>Name of material/product as defined in product master of SAP.</description>
        <label>Material Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Developmental</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>DuPont</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Indirect Customer</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material_ID__c</fullName>
        <description>Unique reference number for each material record - auto generated by SFDC</description>
        <displayFormat>M-{000000000}</displayFormat>
        <inlineHelpText>SFDC Material ID</inlineHelpText>
        <label>Material ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Material_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <inlineHelpText>To be used to capture the CAS Number in case the Material Type is Substance</inlineHelpText>
        <label>Material Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <label>Material Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Promotion</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Digital Asset</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>For info</fullName>
                </value>
                <value>
                    <fullName>Formulated Material</fullName>
                </value>
                <value>
                    <fullName>Hang Tag</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Plaque</fullName>
                </value>
                <value>
                    <fullName>Price List</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Promotional Item</fullName>
                </value>
                <value>
                    <fullName>Sales Aid</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Seminar Material</fullName>
                </value>
                <value>
                    <fullName>Special Offer Item</fullName>
                </value>
                <value>
                    <fullName>Stationery</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Swatch</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Technical Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Technical Material</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_DB_ID__c</fullName>
        <label>Migration DB ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Contents__c</fullName>
        <label>Net Contents</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Organizational Group object that this Material record belongs to, lookup to Organizational Group</description>
        <label>Organizational Group</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>